--- a/hunger-app/package.json
+++ b/hunger-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/mapbox-gl": "^2.7.19",
+    "hunger-app": "file:",
     "mapbox-gl": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
